--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!doctype html><html lang="es"><head><meta charset="utf-8"/><link rel="icon" href="/candenmovimiento/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"/><meta name="description"/><script src="https://kit.fontawesome.com/a188c8dfd9.js" crossorigin="anonymous"></script><link rel="manifest" href="/candenmovimiento/manifest.json"/><link rel="stylesheet" href="\bootstrap.min.css"><title>Candela Errandonea</title><script defer="defer" src="/candenmovimiento/static/js/main.d1e621f9.js"></script><link href="/candenmovimiento/static/css/main.cd506957.css" rel="stylesheet"></head><body><div id="root"></div><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script></body></html>
+<!doctype html>
+  <html lang="es">
+    <head>
+      <meta charset="utf-8"/>
+      <link rel="icon" href="/candenmovimiento/favicon.ico"/>
+      <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+      <meta name="theme-color" content="#000000"/>
+      <meta name="description"/>
+      
+      <script src="https://kit.fontawesome.com/a188c8dfd9.js" crossorigin="anonymous"></script>
+      <link rel="manifest" href="/candenmovimiento/manifest.json"/>
+      <link rel="stylesheet" href="\bootstrap.min.css"><title>Candela Errandonea</title>
+      <script defer="defer" src="/candenmovimiento/static/js/main.d1e621f9.js"></script>
+      <link href="/candenmovimiento/static/css/main.cd506957.css" rel="stylesheet">
+    </head>
+    
+    <body>
+      <div id="root"></div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
+</html>
